<resources>
    <string name="app_name">Smart_Homes_Application</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="add_weight">Input weight</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>
    <string name="submit">Done</string>
    <string name="to_app">Continue to App</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_bac">BacActivity</string>
    <string name="shot_counter">Shot Counter!</string>
    <string name="bac_string">BAC:</string>
    <string name="return_to_home">Return to Home</string>
    <string name="app_title">Shot Counter</string>
    <string name="weight_prompt">Select your weight:</string>
    <string-array name="weight_array">
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
        <item>210</item>
        <item>220</item>
        <item>230</item>
        <item>240</item>
        <item>250</item>
        <item>260</item>
        <item>270</item>
        <item>280</item>
        <item>290</item>
        <item>300</item>
    </string-array>
</resources>
