<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:gravity="center_vertical"
    tools:context="smarthomes.group07.smart_homes_application.LoginActivity"
    tools:deviceIds="wear_square">

        <EditText
            android:id="@+id/weight_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_weight"
            android:inputType="number"/>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male_option"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female_option"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitData"/>

</LinearLayout>
